@@ -1,8 +1,8 @@
 Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
-Version: 1.1.2
-Date: 2017-11-11
+Version: 1.2.0
+Date: 2017-11-16
 Depends:
     R (>= 2.10), splines, splines2
 Author: Brett McClintock, Theo Michelot
